[workspace]
resolver = "2"
members = [
    "rust-bin/find-aruco-marker",
    "rust-bin/find-hollow-board",
    "rust-bin/project-to-image",
    "rust-bin/solve-extrinsic-params",
    "rust-bin/multi_wayside",
    "rust-bin/aruco-generator",
    "rust-lib/aruco-config",
    "rust-lib/aruco-detector",
    "rust-lib/hollow-board-config",
    "rust-lib/hollow-board-detector",
    "rust-lib/plane-estimator",
    "rust-lib/pnp-solver",
    "rust-lib/serde-types",
]

[workspace.dependencies]
opencv = { version = "0.84.5", default-features = false }
cv-convert = { version = "0.26.0" }
