[workspace]
resolver = "2"
members = [
    "src/bin/*",
    "src/lib/*",
]

[workspace.dependencies]
# Computer vision
opencv = { version = "0.84.5", default-features = false }
cv-convert = { version = "0.26.0" }

# Core utilities
anyhow = "1.0.75"
serde = { version = "1.0.188", features = ["derive"] }
clap = { version = "4.4.6", features = ["derive"] }
nalgebra = { version = "0.32.3", features = ["serde-serialize"] }

# Serialization/JSON handling
json5 = "0.4.1"
serde_json = "1.0.107"
serde-loader = { version = "0.2.0", features = ["json5"] }
serde_yaml = "0.9.25"

# Numeric/data processing
itertools = "0.11.0"
noisy_float = { version = "0.2.0", features = ["serde"] }
measurements = "0.11.0"
approx = "0.5.1"
pcd-rs = "0.10.0"

# Code generation/macros
strum = { version = "0.26.0", features = ["derive"] }
indexmap = "2.0.2"

# Date/time and utilities
once_cell = "1.18.0"
log = "0.4.20"
chrono = "0.4.31"
unzip-n = "0.1.2"

# Graphics
kiss3d = "0.35.0"

# Random
rand = "0.8.5"
