[package]
name = "generate-multi-aruco"
version = "0.1.1"
authors = ["jerry73204 <jerry73204@gmail.com>"]
edition = "2021"

[dependencies]
anyhow = "1.0.75"
dialoguer = "0.11.0"
rand = "0.8.5"
console = "0.15.7"
indexmap = "2.0.2"
aruco-config = { version = "0.1.0", path = "../../rust-lib/aruco-config", features = ["with-opencv"] }
measurements = "0.11.0"
noisy_float = "0.2.0"
strum = "0.25.0"
clap = { version = "4.4.6", features = ["derive"] }

[dependencies.opencv]
version = "0.83.0"
default-features = false
features = ["aruco", "highgui", "imgcodecs", "calib3d"]
