[package]
name = "generate-multi-aruco"
version = "0.1.1"
authors = ["jerry73204 <jerry73204@gmail.com>"]
edition = "2021"

[dependencies]
anyhow = { workspace = true }
dialoguer = "0.11.0"
rand = { workspace = true }
console = "0.15.7"
indexmap = { workspace = true }
aruco-config = { version = "0.1.0", path = "../../rust-lib/aruco-config", features = ["with-opencv"] }
measurements = { workspace = true }
noisy_float = { workspace = true }
strum = { workspace = true }
clap = { workspace = true }

[dependencies.opencv]
workspace = true
default-features = false
features = ["aruco", "highgui", "imgcodecs", "calib3d", "clang-runtime"]
