[package]
name = "find-aruco-marker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
aruco-config = { version = "0.1.0", path = "../../rust-lib/aruco-config" }
aruco-detector = { version = "0.1.0", path = "../../rust-lib/aruco-detector" }
clap = { version = "4.4.6", features = ["derive"] }
cv-convert = { version = "0.25.0", default-features = false, features = ["opencv_0-83", "nalgebra_0-30"] }
glob = "0.3.1"
json5 = "0.4.1"
nalgebra = { version = "0.30.1", features = ["serde-serialize"] }
noisy_float = { version = "0.2.0", features = ["serde"] }
opencv = "0.83.0"
pcd-rs = "0.10.0"
serde = { version = "1.0.188", features = ["derive"] }
serde-loader = { version = "0.2.0", features = ["json5"] }
serde-types = { version = "0.1.0", path = "../../rust-lib/serde-types", features = ["with-opencv"] }
serde_json = "1.0.107"
serde_yaml = "0.9.25"
