[package]
name = "find-hollow-board"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
aruco-config = { version = "0.1.0", path = "../../rust-lib/aruco-config" }
clap = { version = "4.4.6", features = ["derive"] }
glob = "0.3.1"
hollow-board-config = { version = "0.1.0", path = "../../rust-lib/hollow-board-config", features = ["kiss3d"] }
hollow-board-detector = { version = "0.1.0", path = "../../rust-lib/hollow-board-detector" }
json5 = "0.4.1"
kiss3d = "0.35.0"
kiss3d-utils = { version = "0.1.0", path = "../../rust-lib/kiss3d-utils" }
nalgebra = { version = "0.30.1", features = ["serde-serialize"] }
once_cell = "1.18.0"
pcd-rs = "0.10.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
