[package]
name = "find-hollow-board"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
aruco-config = { version = "0.1.0", path = "../../rust-lib/aruco-config" }
clap = { workspace = true }
glob = "0.3.1"
hollow-board-config = { version = "0.1.0", path = "../../rust-lib/hollow-board-config", features = ["kiss3d"] }
hollow-board-detector = { version = "0.1.0", path = "../../rust-lib/hollow-board-detector" }
json5 = { workspace = true }
kiss3d = { workspace = true }
once_cell = { workspace = true }
pcd-rs = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dependencies.kiss3d-utils]
git = "https://github.com/NEWSLabNTU/kiss3d-utils.git"
tag = "v0.1.0"

[dependencies.nalgebra]
workspace = true

[dependencies.nalgebra30]
package = "nalgebra"
version = "0.30.1"
features = ["serde-serialize"]
