[package]
name = "pcd-tool"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
console = "0.15.7"
dialoguer = "0.11.0"
velodyne-lidar = { version = "0.2.0", features = ["pcap"] }
pcd-rs = "0.10.0"
chrono = "0.4.31"
pcap = "1.1.0"
num-traits = "0.2.17"
clap = { version = "4.4.6", features = ["derive"] }

[dependencies.pcd-format]
git = "https://github.com/NEWSLabNTU/pcd-tool.git"
tag = "v0.1.1"
