[package]
name = "project-to-image"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
clap = { version = "4.0.13", features = ["derive"] }
cv-convert = { version = "0.21.1", features = ["opencv_0-69", "nalgebra_0-30"] }
itertools = "0.10.5"
json5 = "0.4.1"
nalgebra = { version = "0.30.1", features = ["serde-serialize"] }
noisy_float = { version = "0.2.0", features = ["serde"] }
opencv = "0.69.0"
palette = "0.6.1"
pcd-rs = "0.10.0"
serde = { version = "1.0.145", features = ["derive"] }
serde-types = { version = "0.1.0", path = "../../rust-lib/serde-types", features = ["with-opencv"] }
serde_json = "1.0.86"
serde_yaml = "0.9.13"
