[package]
name = "project-to-image"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
cv-convert = { workspace = true, features = ["opencv", "nalgebra"] }
itertools = { workspace = true }
json5 = { workspace = true }
nalgebra = { workspace = true }
noisy_float = { workspace = true }
opencv = { workspace = true, default-features = false, features = ["calib3d", "highgui", "imgcodecs", "imgproc", "clang-runtime"] }
palette = "0.7.3"
pcd-rs = { workspace = true }
serde = { workspace = true }
serde-types = { version = "0.1.0", path = "../../rust-lib/serde-types", features = ["with-opencv"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
