<package format="3">
  <name>project_to_image</name>
  <version>0.1.0</version>
  <description>ROS 2 node for projecting 3D points to camera images</description>
  <maintainer email="lctk@ntu.edu.tw">NEWSLAB NTU</maintainer>
  <license>MIT</license>

  <depend>rclrs</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>cv_bridge</depend>

  <export>
    <build_type>ament_cargo</build_type>
  </export>
</package>