[package]
name = "solve-extrinsic-params"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
aruco-config = { version = "0.1.0", path = "../../rust-lib/aruco-config" }
aruco-detector = { version = "0.1.0", path = "../../rust-lib/aruco-detector" }
clap = { version = "4.0.13", features = ["derive"] }
cv-convert = { version = "0.21.1", features = ["opencv_0-69", "nalgebra_0-30"] }
glob = "0.3.0"
hollow-board-config = { version = "0.1.0", path = "../../rust-lib/hollow-board-config" }
itertools = "0.10.5"
json5 = "0.4.1"
nalgebra = { version = "0.30.1", features = ["serde-serialize"] }
noisy_float = { version = "0.2.0", features = ["serde"] }
once_cell = "1.15.0"
opencv = "0.69.0"
pnp-solver = { version = "0.1.0", path = "../../rust-lib/pnp-solver" }
serde = { version = "1.0.145", features = ["derive"] }
serde-loader = { version = "0.1.4", features = ["json5"] }
serde-types = { version = "0.1.0", path = "../../rust-lib/serde-types" }
serde_json = "1.0.86"
serde_yaml = "0.9.13"
