[package]
name = "aruco-config"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde-loader = { version = "0.2.0", features = ["json5"] }
measurements = "0.11.0"
noisy_float = { version = "0.2.0", features = ["serde"] }
serde = { version = "1.0.188", features = ["derive"] }
anyhow = "1.0.75"
strum = { version = "0.26.0", features = ["derive"] }

[dependencies.opencv]
workspace = true
optional = true
default-features = false
features = ["aruco", "calib3d"]

[dependencies.newslab-serde-measurements]
git = "https://github.com/NEWSLabNTU/newslab-serde.git"
tag = "v0.1.0"

[features]
with-opencv = ["opencv"]

[[example]]
name = "multi_aruco"
required-features = ["with-opencv"]
