[package]
name = "aruco-config"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde-loader = { workspace = true }
measurements = { workspace = true }
noisy_float = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
strum = { workspace = true }

[dependencies.opencv]
workspace = true
optional = true
default-features = false
features = ["aruco", "calib3d"]

[dependencies.newslab-serde-measurements]
git = "https://github.com/NEWSLabNTU/newslab-serde.git"
tag = "v0.1.0"

[features]
with-opencv = ["opencv"]

[[example]]
name = "multi_aruco"
required-features = ["with-opencv"]
