[package]
name = "aruco-detector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde-loader = { version = "0.2.0", features = ["json5"] }
nalgebra = { version = "0.30.1", features = ["serde-serialize"] }
opencv = "0.83.0"
cv-convert = { version = "0.24.1", default-features = false, features = ["opencv_0-83", "nalgebra_0-30"] }
measurements = "0.11.0"
serde = { version = "1.0.185", features = ["derive"] }
anyhow = "1.0.75"
indexmap = "2.0.0"
log = "0.4.20"
serde-types = { version = "0.1.0", path = "../serde-types", features = ["with-opencv"] }
noisy_float = { version = "0.2.0", features = ["serde"] }
aruco-config = { version = "0.1.0", path = "../aruco-config", features = ["with-opencv"] }
itertools = "0.11.0"
geom-algo = { version = "0.1.0", path = "../geom-algo", features = ["with-nalgebra"] }

[features]
