[package]
name = "aruco-detector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde-loader = { version = "0.2.0", features = ["json5"] }
cv-convert = { version = "0.25.0", default-features = false, features = ["opencv_0-83", "nalgebra_0-30"] }
measurements = "0.11.0"
serde = { version = "1.0.188", features = ["derive"] }
anyhow = "1.0.75"
indexmap = "2.0.2"
log = "0.4.20"
serde-types = { version = "0.1.0", path = "../serde-types", features = ["with-opencv"] }
noisy_float = { version = "0.2.0", features = ["serde"] }
aruco-config = { version = "0.1.0", path = "../aruco-config", features = ["with-opencv"] }
itertools = "0.11.0"
# geom-algo = { version = "0.1.0", path = "../geom-algo", features = ["with-nalgebra"] }

[dependencies.opencv]
version = "0.83.0"
default-features = false
features = ["aruco"]

[dependencies.nalgebra30]
package = "nalgebra"
version = "0.30.1"
features = ["serde-serialize"]

[dependencies.nalgebra32]
package = "nalgebra"
version = "0.32.3"
features = ["serde-serialize"]

[dependencies.newslab-geom-algo]
git = "https://github.com/NEWSLabNTU/newslab-geom-algo.git"
tag = "v0.2.1"

[features]
