[package]
name = "aruco-detector"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde-loader = { version = "0.2.0", features = ["json5"] }
cv-convert = { workspace = true, features = ["nalgebra"] }
measurements = "0.11.0"
serde = { version = "1.0.188", features = ["derive"] }
anyhow = "1.0.75"
indexmap = "2.0.2"
log = "0.4.20"
serde-types = { version = "0.1.0", path = "../serde-types", features = ["with-opencv"] }
noisy_float = { version = "0.2.0", features = ["serde"] }
aruco-config = { version = "0.1.0", path = "../aruco-config", features = ["with-opencv"] }
itertools = "0.11.0"

[dependencies.opencv]
workspace = true
default-features = false
features = ["aruco", "calib3d"]

[dependencies.nalgebra]
version = "0.32.3"
features = ["serde-serialize"]

[dependencies.newslab-geom-algo]
git = "https://github.com/NEWSLabNTU/newslab-geom-algo.git"
tag = "v0.2.1"

[dev-dependencies.opencv]
workspace = true
default-features = false
features = ["aruco", "imgcodecs"]

[dev-dependencies]
clap = { version = "4.4.6", features = ["derive"] }
