[package]
name = "common-types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
protobuf-types = { version = "0.1.0", path = "../protobuf-types" }
serde-types = { version = "0.1.0", path = "../serde-types" }

[features]
default = []
full = ["serde-types/full", "protobuf-types/full"]
with-tch = ["protobuf-types/with-tch"]
with-opencv = ["serde-types/with-opencv", "protobuf-types/with-opencv"]
with-nalgebra = ["serde-types/with-nalgebra", "protobuf-types/with-nalgebra"]
with-prost = ["serde-types/with-prost"]
with-measurements = ["serde-types/with-measurements"]
with-image = ["protobuf-types/with-image"]
