[package]
name = "geom-algo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.11.0"
anyhow = "1.0.75"
log = "0.4.20"
noisy_float = { version = "0.2.0", features = ["serde"] }
collected = "0.4.0"
unzip-n = "0.1.2"
num-traits = "0.2.16"
geo = { version = "0.26.0", optional = true }
sfcgal = { version = "0.6.0", optional = true }
nalgebra = { version = "0.30.1", optional = true }

[dev-dependencies]
approx = "0.5.1"
nalgebra = { version = "0.30.1", features = ["rand"] }
rand = "0.8.5"

[features]
default = []
full = ["with-nalgebra", "with-geo"]
with-nalgebra = ["nalgebra"]
with-geo = ["geo", "sfcgal"]
