[package]
name = "hollow-board-config"
version = "0.1.0"
edition = "2021"

[dependencies]
serde-loader = { version = "0.1.4", features = ["json5"] }
nalgebra = "0.30.1"
approx = "0.5.1"
anyhow = "1.0.58"
serde = { version = "1.0.140", features = ["derive"] }
aruco-config = { version = "0.1.0", path = "../aruco-config" }
common-types = { version = "0.1.0", path = "../common-types", features = ["with-measurements"] }
measurements = { version = "0.11.0", features = ["serde"] }
kiss3d = { version = "0.35.0", optional = true }
serde-types = { version = "0.1.0", path = "../serde-types", features = ["with-nalgebra"] }
