[package]
name = "hollow-board-config"
version = "0.1.0"
edition = "2021"

[dependencies]
serde-loader = { version = "0.2.0", features = ["json5"] }
nalgebra = "0.32.3"
approx = "0.5.1"
anyhow = "1.0.75"
serde = { version = "1.0.188", features = ["derive"] }
aruco-config = { version = "0.1.0", path = "../aruco-config" }
measurements = { version = "0.11.0", features = ["serde"] }
kiss3d = { version = "0.35.0", optional = true }
serde-types = { version = "0.1.0", path = "../serde-types", features = ["with-nalgebra", "with-measurements"] }
