[package]
name = "hollow-board-detector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = { version = "0.30.1", features = ["serde"] }
sample-consensus = "1.0.2"
approx = "0.5.1"
itertools = "0.11.0"
anyhow = "1.0.75"
serde = { version = "1.0.188", features = ["derive"] }
noisy_float = { version = "0.2.0", features = ["serde"] }
arrsac = "0.10.0"
rand = "0.8.5"
unzip-n = "0.1.2"
hollow-board-config = { version = "0.1.0", path = "../hollow-board-config" }
aruco-config = { version = "0.1.0", path = "../aruco-config" }
plane-estimator = { version = "0.1.0", path = "../plane-estimator" }
geom-algo = { version = "0.1.0", path = "../geom-algo", features = ["with-nalgebra"] }

[dev-dependencies]

[features]
