[package]
name = "pcd-format"
version = "0.1.0"
authors = ["jerry73204 <jerry73204@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pcd-rs = { version = "0.10.0", features = ["derive"] }
serde = { version = "1.0.188", features = ["derive"] }
