[package]
name = "pnp-solver"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
opencv = { version = "0.83.0", default-features = false, features = ["calib3d"] }
serde-types = { path = "../serde-types", features = ["with-opencv", "with-nalgebra"] }
cv-convert = { version = "0.25.0", default-features = false, features = ["opencv_0-83", "nalgebra_0-32"] }
serde = { version = "1.0.188", features = ["derive"] }
nalgebra = "0.32.3"
log = "0.4.20"
strum = { version = "0.25.0", features = ["derive"] }

[dependencies.newslab-serde-cv]
git = "https://github.com/NEWSLabNTU/newslab-serde.git"
tag = "v0.1.0"
features = ["with-opencv"]
