[package]
name = "pnp-solver"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
opencv = { workspace = true, default-features = false, features = ["calib3d", "imgproc"] }  # imgproc is not used but is required to fix compile error
serde-types = { path = "../serde-types", features = ["with-opencv", "with-nalgebra"] }
cv-convert = { workspace = true, features = ["nalgebra"] }
serde = { workspace = true }
nalgebra = { workspace = true }
log = { workspace = true }
strum = { workspace = true }

[dependencies.newslab-serde-cv]
git = "https://github.com/NEWSLabNTU/newslab-serde.git"
tag = "v0.1.0"
features = ["with-opencv"]
