
[package]
name = "point-filter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde-loader = { version = "0.2.0", features = ["json5"] }
kiss3d = { version = "0.35.0", optional = true }
log = { version = "0.4.20", optional = true }
nalgebra = "0.32.3"
noisy_float = { version = "0.2.0", features = ["serde"] }
serde = { version = "1.0.188", features = ["derive"] }
common-types = { version = "0.1.0", path = "../common-types" }

[dependencies.kiss3d-utils]
git = "https://github.com/NEWSLabNTU/kiss3d-utils.git"
tag = "v0.1.0"
optional = true

[features]
with-kiss3d = ["kiss3d", "kiss3d-utils", "log"]
