[package]
name = "protobuf-types"
version = "0.1.0"
authors = ["jerry73204 <jerry73204@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.12.1"
serde = { version = "1.0.188", features = ["derive"] }
opencv = { version = "0.83.0", optional = true }
nalgebra = { version = "0.32.3", optional = true }
image = { version = "0.24.7", optional = true }
anyhow = "1.0.75"
regex = "1.9.6"
chrono = "0.4.31"
serde-types = { version = "0.1.0", path = "../serde-types" }

[build-dependencies]
glob = "0.3.1"
anyhow = "1.0.75"
prost-build = "0.12.1"
itertools = "0.11.0"

[features]
default = []
full = ["with-opencv", "with-nalgebra", "with-image"]
with-opencv = ["opencv"]
with-nalgebra = ["nalgebra"]
with-image = ["image"]

[dev-dependencies]
approx = "0.5.1"
rand = "0.8.5"
