[package]
name = "serde-types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
approx = "0.5.1"
chrono = "0.4.19"
humantime = "2.1.0"
indexmap = { version = "1.9.1", features = ["serde"] }
noisy_float = { version = "0.2.0", features = ["serde"] }
serde = { version = "1.0.140", features = ["derive"] }
serde_bytes = "0.11.6"
serde_json = "1.0.82"
url = { version = "2.2.2", features = ["serde"] }
slice-of-array = "0.3.2"
derivative = "2.2.0"
json5 = "0.4.1"
num-derive = "0.3.3"
num-traits = "0.2.15"
serde-loader = { version = "0.1.4", features = ["json", "json5"] }
nalgebra = { version = "0.30.1", optional = true }
opencv = { version = "0.69.0", optional = true, default-features = false }
measurements = { version = "0.11.0", optional = true }
cv-convert = { version = "0.21.0", default-features = false, optional = true }
prost = { version = "0.11.0", optional = true }
gcd = "2.1.0"

[features]
default = []
full = ["with-opencv", "with-nalgebra", "with-prost", "with-measurements"]
with-opencv = ["opencv", "cv-convert/opencv_0-69"]
with-nalgebra = ["nalgebra", "cv-convert/nalgebra_0-30"]
with-prost = ["prost"]
with-measurements = ["measurements"]
